✨Basic Player Movement and Test Scene

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ export_credentials.cfg
 # Imported translations (automatically generated from CSV files)
 *.translation
 
+# Visual Studio ignore
+.vs/
+
 # Mono-specific ignores
 .mono/
 data_*/
